<resources>
    <string name="app_name">Snacking</string>

    <string name="invoice_type_facture">Facture</string>
    <string name="invoice_type_avoir">Avoir</string>
    <string name="invoice_state_en_cours">EN COURS</string>
    <string name="invoice_state_terminee">TERMINEE</string>


    <!-- Strings related to Sync activity -->
    <string name="title_activity_synchronization">Synchronisation avec Dolibarr</string>
    <string name="synchronization_service_name">Synchronisation en cours</string>
    <string name="tablet_name">Choisir la tablette</string>
    <string name="current_tablet">Tablette</string>
    <string name="last_sync_text">Dernière mise à jour des données de la tablette (produits, prix, clients, etc...) :</string>
    <string name="last_sync_date">vide</string>
    <string name="button_update">Mise à jour</string>
    <string name="invoice_to_post">Toutes les factures/avoirs de la tablette sont postées dans Dolibarr</string>
    <string name="button_post_invoice">Poster maintenant</string>
    <string name="network_error_activity_sync">Impossible de synchroniser, vous n\'êtes pas connecté à internet</string>
    <string name="dialog_title_activity_sync">Erreur de réseau</string>
    <string name="update_data_dolibarr_success">Données mises à jour avec succès</string>
    <string name="update_data_dolibarr_fail">Echec de la mise à jour</string>
    <string name="update_data_dolibarr_fail_1">Vous devez d\'abord poster toutes les factures avant de pouvoir mettre à jour les données</string>
    <string name="update_data_dolibarr_fail_5">La récupération des factures de dolibarr a échoué</string>
    <string name="post_invoices_dolibarr_success">Factures/Avoirs postés avec succès</string>
    <string name="post_invoices_dolibarr_fail">Echec lors de l\'envoi au serveur des factures/avoirs</string>
    <string name="login_dolibarr_credentials_empty">Impossible de se connecter au serveur</string>
    <string name="login_dolibarr_fail">Echec de la connexion au serveur</string>
    <string name="login_dolibarr_success">Connecté</string>
    <string name="sync_dolibarr_fail">Echec de la synchronisation</string>
    <string name="service_dolibarr_error">Erreur du service de synchronisation</string>
    <string name="service_dolibarr_start">Début de la synchronisation</string>
    <string name="service_dolibarr_end">Fin du service de synchronisation</string>



    <!-- Strings related to CustomerSectionFragment -->
    <string name="title_customer_select">Sélectionnez un client</string>

    <!-- Strings related to product group fragment-->
    <string name="minimum_group_size">Impossible de supprimer le dernier groupe</string>
    <string name="title_product_of_group">Groupe</string>


    <!-- Strings related to CustomerOfGroupFragment-->
    <string name="title_customer_of_group">Groupe</string>

    <string name="dialog_title_group_product">Nouveau groupe de produit</string>

    <!-- Strings related to GroupCustomerFragment -->
    <string name="dialog_title_customer_group">Nouveau groupe de clients</string>


    <!-- Strings related to Print -->
    <string name="title_print">Imprimer</string>
    <string name="activity_print">Impression</string>
    <string name="button_print">Imprimer</string>
    <string name="button_change_last_invoice">Modifier</string>
    <string name="button_finish">Terminer la facture</string>
    <string name="products">Produits</string>
    <string name="price_u_ht">Prix unitaire HT</string>
    <string name="qty_deliver">Quantité totale</string>
    <string name="total_line">Montant</string>

    <string name="hot_food_name">HOT FOOD S.A.R.L.</string>
    <string name="hot_food_address">60 rue des artisans ZA Baco Koné</string>
    <string name="hot_food_tel">Erick 78 90 14</string>
    <string name="hot_food_email">hotfood.sarl@gmail.com</string>
    <string name="tot_ht">TOTAL HT</string>
    <string name="tss">TSS(5%)</string>
    <string name="tgc025">TGC(0.25%)</string>
    <string name="tot_ttc">TOTAL TTC</string>
    <string name="tot_letter">Arrêtée la présente facture à la somme de :</string>
    <string name="rcs">RCS NOUMEA 2013 B 1 196 666</string>
    <string name="sgbc">SGBC 18319 06730 86022716001 93</string>


    <!-- Strings related to Invoice Statement Print -->
    <string name="invoice_statement_title">Relevé de facture</string>
    <string name="invoice_date">Date</string>
    <string name="invoice_dolibarr_ref">Ref. dolibarr</string>
    <string name="invoice_customer_ref">Ref. client</string>


    <string name="dialog_negative">Annuler</string>
    <string name="dialog_title_product_quantity">Quantité à ajouter</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_fragment_settings">Paramètres</string>

    <!-- Data & Sync settings-->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_auto_sync">Synchronisation automatique</string>
    <string name="pref_summary_auto_sync">Entre 23h00 et 00h00</string>
    <string name="pref_title_manual_sync">Synchronisation Manuelle</string>
    <string name="pref_summary_manual_sync">Dernière synchronisation le</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>


</resources>
